--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,6 @@ body {
 
 h1 {
     color: white;
-    font-family: Verdana, sans-serif;
     font-weight: normal;
     font-size: 50px;
 
@@ -20,4 +19,24 @@ h1 {
 .download a {
     color: aquamarine;
     font-size: 16px;
+}
+
+video {
+    padding-top: 1.5em;
+}
+
+h2 {
+    color: white;
+    font-size: 42px;
+    font-weight: 300;
+}
+
+.subhead {
+    color: gray;
+    font-size: 21px;
+}
+
+footer {
+    color: gray;
+    text-align: right;
 }
